# ugro

./: .gitignore  LICENSE  README.md  implementation_demo.py  pixi.toml  plan_ugro_health_monitoring_20260120.md  pyproject.toml  setup.py  test_cli_integration.py  test_cluster_health.py  test_security_simple.py  test_simple.py  test_wandb.sh  test_wandb_integration.py  ugro.sh  ugro_cli.py
.serena/: project.yml
config/: cluster.yaml  llama2_lora.yaml  llama_lora_hpo.yaml  llama_lora_hpo_conditional.yaml  training_defaults.yaml
configs/: batch.yaml
docs/: UGRO-Code-Reference.md  UGRO-Complete-Setup.md  UGRO-Implementation-Phase2.md  UGRO-Quick-Implementation.md  UGRO-Webhook-Setup.md  UGRO-deployment-guide.md  UGRO-project-design.md  UGRO-setup-status.md  advanced-optimization.md  cluster-ops-reference.md  phase2b_implementation_summary.md  pixi_usage_guide.py
examples/: health_monitor_examples.py  metrics_collector_examples.py
scripts/: batch_submit.py  monitor_daemon.py  run_llama_hpo.sh  setup_webhook_service.sh  sync_to_workers.py  train-single-test.py  train_production.py
src/: __init__.py  __main__.py  agent.py  cli.py.backup  cluster.py  config.py  job.py  ssh_utils.py  test_cluster_health.py  ugro_cli.py
systemd/: ugro-monitor.service  ugro-webhook.service
tests/: test_adaptive_monitor.py  test_agent.py  test_basic_structure.py  test_cli.py  test_cli_wandb_security.py  test_config.py  test_config_simple.py  test_gang_scheduling.py  test_health_metrics.py  test_health_monitor.py  test_launch_coordinator.py  test_metrics_collector.py  test_queues.py  (+8 more)
(+177 files in other folders)
