
[project]
name = "ugro"
version = "0.1.0"
description = "Unified GPU Resource Orchestrator - Personal scale GPU cluster management"
authors = [{name = "Oliver", email = "buitelaar@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "paramiko>=3.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
monitor = [
    "prometheus-client>=0.17.0",
    "flask>=2.3.0",
]

[project.scripts]
ugro = "src.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ugro = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
monitor = { features = ["monitor"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python-dotenv = ">=1.2.1,<2"
